[gd_scene load_steps=9 format=3 uid="uid://room09base"]

[ext_resource type="Script" path="res://scenes/rooms/combat_room.gd" id="1_combat"]
[ext_resource type="Script" path="res://scenes/main/game_manager.gd" id="2_manager"]
[ext_resource type="PackedScene" uid="uid://bgrunt1234567" path="res://scenes/enemies/grunt.tscn" id="3_grunt"]
[ext_resource type="PackedScene" uid="uid://bheavy1234567" path="res://scenes/enemies/heavy.tscn" id="4_heavy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(40, 1, 40)

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(40, 1, 40)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.15, 0.15, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_wall"]
size = Vector3(40, 5, 1)

[node name="Room09" type="Node3D"]
script = ExtResource("1_combat")
room_name = "The Gauntlet"

[node name="PlayerSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 15)

[node name="GameManager" type="Node" parent="." groups=["game_manager"]]
script = ExtResource("2_manager")

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]
collision_layer = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_floor")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="WallNorth" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -20)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallNorth"]
mesh = SubResource("BoxMesh_wall")

[node name="WallSouth" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 20)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallSouth"]
mesh = SubResource("BoxMesh_wall")

[node name="WallEast" type="StaticBody3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 20, 2.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallEast"]
mesh = SubResource("BoxMesh_wall")

[node name="WallWest" type="StaticBody3D" parent="Environment"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -20, 2.5, 0)
collision_layer = 1

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/WallWest"]
mesh = SubResource("BoxMesh_wall")

[node name="ExitDoor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
shadow_enabled = true

[node name="Enemies" type="Node3D" parent="."]

[node name="Heavy1" parent="Enemies" instance=ExtResource("4_heavy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -12)

[node name="Heavy2" parent="Enemies" instance=ExtResource("4_heavy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -12)

[node name="Heavy3" parent="Enemies" instance=ExtResource("4_heavy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -15)

[node name="Grunt1" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -5)

[node name="Grunt2" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -5)

[node name="Grunt3" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -8)

[node name="Grunt4" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -8)

[node name="Grunt5" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="Grunt6" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15, 0, 0)

[node name="Grunt7" parent="Enemies" instance=ExtResource("3_grunt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)
